prospects list functionality

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -155,7 +155,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/accounts/list"><i class="icon-home"></i> Accounts</a></li>
                         <li><a href="/contacts/list"><i class="icon-user"></i> Contacts</a></li>
-                      <!--  {% if user.group b-and 512 %}<li><a href="/prospects"><i class="glyphicon glyphicon-fire"></i> Prospects</a></li>{% endif %} -->
+                       {% if user.group b-and 512 %}<li><a href="/prospects"><i class="glyphicon glyphicon-fire"></i> Prospects</a></li>{% endif %} 
                     </ul>
                </li>{% endif %}
 
